adding gemini api key to config and .env

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ APP_NAME=tinystack
 PORT=:8081
 GCP_PROJECT_ID=482777410016
 ANTHROPIC_API_KEY=projects/482777410016/secrets/Anthropic-Test/versions/1
+GEMINI_API_KEY=projects/482777410016/secrets/GeminiTest/versions/1
